content/v1.4.5/zh/api/campaign-ext/MapInfoItemVM.md
---
title: "MapInfoItemVM"
description: "MapInfoItemVM 的自动生成类参考。"
---
# MapInfoItemVM

**Namespace:** TaleWorlds.CampaignSystem.ViewModelCollection.Map.MapBar
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class MapInfoItemVM : ViewModel`
**Base:** `ViewModel`
**File:** `TaleWorlds.CampaignSystem.ViewModelCollection/TaleWorlds/CampaignSystem/ViewModelCollection/Map/MapBar/MapInfoItemVM.cs`

## 概述

`MapInfoItemVM` 位于 `TaleWorlds.CampaignSystem.ViewModelCollection.Map.MapBar`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.ViewModelCollection.Map.MapBar` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `HasWarning` | `public bool HasWarning { get; set; }` |
| `IntValue` | `public int IntValue { get; set; }` |
| `FloatValue` | `public float FloatValue { get; set; }` |
| `VisualId` | `public string VisualId { get; set; }` |
| `Value` | `public string Value { get; set; }` |

## 主要方法

### ExecuteBeginHint
`public void ExecuteBeginHint()`

**用途 / Purpose:** 执行 begin hint 对应的操作或工作流。

```csharp
// 先通过子系统 API 拿到 MapInfoItemVM 实例
MapInfoItemVM mapInfoItemVM = ...;
mapInfoItemVM.ExecuteBeginHint();
```

### ExecuteEndHint
`public void ExecuteEndHint()`

**用途 / Purpose:** 执行 end hint 对应的操作或工作流。

```csharp
// 先通过子系统 API 拿到 MapInfoItemVM 实例
MapInfoItemVM mapInfoItemVM = ...;
mapInfoItemVM.ExecuteEndHint();
```

### SetOverriddenVisualId
`public void SetOverriddenVisualId(string visualId)`

**用途 / Purpose:** 为 overridden visual id 赋新值，并同步更新对象内部状态。

```csharp
// 先通过子系统 API 拿到 MapInfoItemVM 实例
MapInfoItemVM mapInfoItemVM = ...;
mapInfoItemVM.SetOverriddenVisualId("example");
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
MapInfoItemVM mapInfoItemVM = ...;
mapInfoItemVM.ExecuteBeginHint();
```

## 参见

- [本区域目录](../)